k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-talk
  labels:
    app: code-talk
    environment: production
